- detect partitions on nvme devices (mga#17743)

Version 17.18.1 - 10 February 2016

- drakboot:
  o add support for grub2-text too (mga#9431)
- library (for draklive-install):
  o check ESP has the right fs type (mga#16246)
  o check that ESP mount point actually is an ESP

Version 17.16 - 25 January 2016

- detect_devices:
  o fix a crash on non x86

Version 17.15 - 16 January 2016

- diskdrake:
  o fix crash (mga#17484)

Version 17.12 - 2 January 2016

- misc cleanups
- diskdrake:
  o auto fill LV name from mntpnt (mga#5407)
  o suggest "lv_foo" instead of just "foo" for LVname
- drakboot:
  o skip swap in the list of partitions (mga#15767)
  o split drakautologin from drakboot (mga#7160)
- draksound:
  o drop support for ISApnp sound cards
  o drop support for picking an arbitrary driver
  o drop support for switching between OSS <-> ALSA
  o make troubleshooting not an advanced setting

Version 17.8 - 22 December 2015

- recognize new kernel-4.3 drivers
- use sddm instead of kdm
- use task-plasma5 instead of task-kde4

Version 17.3 - 4 December 2015

- recognize new kernel-4.3 drivers
- drakboot:
  o fix lightdm support after upstream config file change

Version 17.1 - 27 August 2015

- recognize new kernel-4.1 drivers

Version 16.104 - 13 June 2015

- diskdrake:
  o prevent errors when telling kernel to reread partition table

Version 16.103 - 4 June 2015

- drakfont:
  o fix moving fonts (mga#16074)
- diskdrake, partitioning_wizard:
  o only use current disk when auto partitioning, wiping disk,
    using free space (mga#16055)

Version 16.102 - 29 May 2015

- diskdrake:
  o ignore special 'Packard_Bell' and 'Push_Button_Reset' partitions (mga#15999)
  o run udevadm settle after actions that trigger device reload (mga#15999)
- harddrake2:
  o set min width for left panel (mga#16026)

Version 16.101 - 25 May 2015

- library (for draklive-install):
  o fix not always suggesting /boot/ESP mount point (mga#15689)
- diskdrake: