@@ -1,3 +1,4 @@
+- detect nvme devices as block devices (mga#17743)
 - detect partitions on nvme devices (mga#17743)
 
 Version 17.18.1 - 10 February 2016
